<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/homepage" />

    <item
        android:id="@+id/likeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_heart_svgrepo_com"
        android:title="@string/likepage" />

    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cartpage" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/logout_svg"
        android:title="@string/profilepage" />

</menu>