<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:clickable="true"
    android:focusable="true"
    android:elevation="10dp"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_constraintDimensionRatio="2:1">

    <ImageView
        android:padding="10dp"
        android:id="@+id/ivMedDisplayItem"
        android:background="@drawable/custom_image_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/med4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/med4_content_description" />
    <TextView
        android:id="@+id/tvNameMedDisplayItem"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/med4_name"
        app:layout_constraintStart_toStartOf="@id/ivMedDisplayItem"
        app:layout_constraintTop_toBottomOf="@id/ivMedDisplayItem"
        />


    <TextView
        android:id="@+id/tvPriceMedDisplayItem"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvNameMedDisplayItem"
        app:layout_constraintTop_toBottomOf="@id/tvNameMedDisplayItem"
        android:text="@string/med4_price" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1" />

    <ToggleButton
        android:id="@+id/btnLike"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:textOn=""
        android:textOff=""
        android:background="@drawable/ic_heart_svgrepo_com"
        android:backgroundTint="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:tint="@color/white" />
    

</androidx.constraintlayout.widget.ConstraintLayout>